cmd/picky/tests/ptr3.p.out
stack trace at:
main() pid 2	pc 0x00000038 ptr3.p:28
	local variables:
	p = 0xc208040100
	q = 0xc208040100

global variables:
Maxint = 2147483647
Minint = -2147483646
Maxchar = 'ÿ'
Minchar = '\000'
Minstrength = %!v(PANIC=runtime error: index out of range)
Maxstrength = %!v(PANIC=runtime error: index out of range)
Transp = 0.0
Tlucid = 0.5
Opaque = 1.0
NoBut = %!v(PANIC=vfmt: fmt 75)
Shift = 'ñ'
MetaLeft = '÷'
Eol = \n
Down = 'ô'
Left = 'ó'
Ctrl = 'ð'
Del = 'ù'
MetaRight = 'ø'
Esc = '\033'
Up = 'õ'
Return = 'ö'
Eof = 'ÿ'
Right = 'ò'
Tab = \t
Nul = '\000'
stdin = <stdin>
stdout = <stdout>
stdgraph = invalid file
heap:
0xc208040100 = 3
stack trace at:
main() pid 2	pc 0x00000046 ptr3.p:32
	local variables:
	p = 0xc208040100
	q = 0xc208040100

global variables:
Maxint = 2147483647
Minint = -2147483646
Maxchar = 'ÿ'
Minchar = '\000'
Minstrength = %!v(PANIC=runtime error: index out of range)
Maxstrength = %!v(PANIC=runtime error: index out of range)
Transp = 0.0
Tlucid = 0.5
Opaque = 1.0
NoBut = %!v(PANIC=vfmt: fmt 75)
Shift = 'ñ'
MetaLeft = '÷'
Eol = \n
Down = 'ô'
Left = 'ó'
Ctrl = 'ð'
Del = 'ù'
MetaRight = 'ø'
Esc = '\033'
Up = 'õ'
Return = 'ö'
Eof = 'ÿ'
Right = 'ò'
Tab = \t
Nul = '\000'
stdin = <stdin>
stdout = <stdout>
stdgraph = invalid file
heap:
3
